[tool.poetry]
name = "maps"
version = "0.1.0"
description = ""
authors = ["unrndm <unrndm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.16.0"
fastapi = "^0.70.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
